--- a/bcapp_client/app/src/main/res/values/strings.xml
+++ b/bcapp_client/app/src/main/res/values/strings.xml
@@ -24,4 +24,8 @@
     <string name="nope">nope</string>
     <string name="possible_gain">possible gain</string>
     <string name="enter_bet_sum">enter bet sum</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="exit_question">Do you want exit ?</string>
 </resources>
