--- a/bcapp_client/app/src/main/res/values/strings.xml
+++ b/bcapp_client/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="exit_question">Do you want exit ?</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="vs">vs</string>
 </resources>
