--- a/iroha-android-sample/src/main/res/values/strings.xml
+++ b/iroha-android-sample/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
 <resources>
-    <string name="app_name">Iroha-Android</string>
     <string name="to">To</string>
     <string name="amount">Amount</string>
     <string name="or">OR</string>
@@ -50,4 +49,24 @@
     <string name="vs">vs</string>
     <string name="username">username</string>
     <string name="signup">sign up</string>
+    <string name="bet">bet</string>
+
+    <string name="app_name">Blockchain bet client</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_games">GamesActivity</string>
+    <string name="account">Account</string>
+    <string name="list_of_games">List of games</string>
+    <string name="exit">Exit</string>
+    <string name="title_activity_main2">Main2Activity</string>
+    <string name="title_section1">Section 1</string>
+    <string name="title_section2">Section 2</string>
+    <string name="title_section3">Section 3</string>
+
+    <string name="action_example">Example action</string>
+
 </resources>
