work with fragments

--- a/iroha-android-sample/src/main/res/values/strings.xml
+++ b/iroha-android-sample/src/main/res/values/strings.xml
@@ -6,7 +6,6 @@
     <string name="send">send</string>
     <string name="registration_title">I R O H A</string>
     <string name="registration_subtitle">Blockchain technologies for business</string>
-    <string name="username_hint">Username (use small latin letters and digits)</string>
     <string name="button_register">Register</string>
     <string name="error_dialog_title">Failure</string>
     <string name="username_empty_error_dialog_message">Username can\'t be empty</string>
@@ -50,6 +49,7 @@
     <string name="enter_bet_sum">enter bet sum</string>
     <string name="vs">vs</string>
     <string name="username">username</string>
+    <string name="username_hint">enter username</string>
     <string name="signup">sign up</string>
     <string name="bet">bet</string>
     <string name="account">Account</string>
